src/test/ui/issue-76597.stderr
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `y`
  --> $DIR/issue-76597.rs:3:38
   |
LL |   ...                   x: u8
   |                              - expected one of 7 possible tokens
   |  ____________________________|
   | |
LL | | ...                   y: u8,
|  | |                       ^ unexpected token
|  | |
   |   help: missing `,`

error: aborting due to previous error

