src/test/ui/issue-76597.rs
fn f(
                                     x: u8
                                     y: u8,
) {}
//~^^ ERROR: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `y`

fn main() {}
